--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,25 +10,25 @@ on:
 jobs:
   build:
     environment: development
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     env:
       DOCKER_IMAGE: ghcr.io/hackthebox/hackster:base
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.0
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v2.5
 
       - name: Login to ghcr.io
-        uses: docker/login-action@v2
+        uses: docker/login-action@v2.1
         with:
           registry: ghcr.io
           username: ${{ secrets.GH_USER }}
           password: ${{ secrets.GH_TOKEN }}
 
       - name: Build image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           push: true
           context: .
