--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,7 @@ jobs:
   deploy:
     environment:
       name: ${{ (github.ref == 'refs/heads/production') && 'production' || 'development' }}
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       COMMITTER: ${{ github.actor }}
@@ -20,7 +20,7 @@ jobs:
       CHANGE_CAUSE: ${{ github.run_number }}-${{ github.sha }}
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.0
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to ghcr.io
@@ -30,7 +30,7 @@ jobs:
           username: makelarisjr
           password: ${{ secrets.GH_TOKEN }}
       - name: Build image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           push: true
           context: .
