Add missing folder

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ ignore =
 # Type Annotations
     ANN002,ANN003,ANN101,ANN102,ANN204,ANN206,F722
 import-order-style = appnexus
-exclude = __init__.py, config.py, tests/*
+exclude = __init__.py, config.py, tests/*, alembic/*
 
 [pytest]
 filterwarnings =
