--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,35 +1,31 @@
+ARG APP_NAME=hackster
+ARG PYTHON_VERSION=3.11.2
+ARG POETRY_VERSION=1.4.2
+
 # `python-base` sets up all our shared environment variables
-FROM python:3.11.2 as python-base
+FROM python:${PYTHON_VERSION} as python-base
 
 # python
-ENV PYTHONUNBUFFERED=1 \
+ENV \
+    # immediately dumped to the stream instead of being buffered.
+    PYTHONUNBUFFERED=1 \
     # prevents python creating .pyc files
     PYTHONDONTWRITEBYTECODE=1 \
-    \
     # pip
     PIP_NO_CACHE_DIR=off \
     PIP_DISABLE_PIP_VERSION_CHECK=on \
     PIP_DEFAULT_TIMEOUT=100 \
-    \
     # poetry
     # https://python-poetry.org/docs/configuration/#using-environment-variables
-    POETRY_VERSION=1.4.0 \
+    POETRY_VERSION=$POETRY_VERSION \
     # make poetry install to this location
     POETRY_HOME="/opt/poetry" \
     # make poetry create the virtual environment in the project's root
     # it gets named `.venv`
     POETRY_VIRTUALENVS_IN_PROJECT=true \
     # do not ask any interactive question
-    POETRY_NO_INTERACTION=1 \
-    \
-    # paths
-    # this is where our requirements + virtual environment will live
-    PYSETUP_PATH="/opt/pysetup" \
-    VENV_PATH="/opt/pysetup/.venv"
-
-
-# prepend poetry and venv to path
-ENV PATH="$POETRY_HOME/bin:$VENV_PATH/bin:$PATH"
+    POETRY_NO_INTERACTION=1
+ENV APP_PATH="/opt/hackster"
 
 # `builder-base` stage is used to build deps + create our virtual environment
 FROM python-base as builder-base
@@ -42,10 +38,13 @@ RUN apt-get update \
 
 # install poetry - respects $POETRY_VERSION & $POETRY_HOME
 RUN curl -sSL https://install.python-poetry.org | python
+ENV PATH="$POETRY_HOME/bin:$PATH"
 
 # copy project requirement files here to ensure they will be cached.
-WORKDIR $PYSETUP_PATH
-COPY poetry.lock pyproject.toml ./
+WORKDIR $APP_PATH
+COPY ./poetry.lock ./pyproject.toml ./
 
 # install runtime deps - uses $POETRY_VIRTUALENVS_IN_PROJECT internally
 RUN poetry install --no-cache --without dev
+ENV VENV_PATH="$APP_PATH/.venv"
+ENV PATH="$VENV_PATH/bin:$PATH"
