--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3.5.0
 
-      - name: Set up Python 3.11
+      - id: setup-python
+        name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
