--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,7 @@ jobs:
   deploy:
     environment:
       name: ${{ (github.ref == 'refs/heads/production') && 'production' || 'development' }}
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       COMMITTER: ${{ github.actor }}
