--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,13 @@ python = "^3.11"
 aiodns = "^3.0.0"
 arrow = "^1.2.3"
 py-cord = "^2.4.1"
-pydantic = {extras = ["dotenv"], version = "^1.10.7"}
+pydantic = { extras = ["dotenv"], version = "^1.10.7" }
 taskipy = "^1.10.4"
 sqlalchemy = { extras = ["asyncio"], version = "^2.0.9" }
 bcrypt = "^4.0.1"
 asyncmy = "^0.2.7"
 fastapi = "^0.95.1"
-sentry-sdk = "^1.19.1"
+sentry-sdk = {extras = ["sqlalchemy"], version = "^1.20.0"}
 uvicorn = "^0.21.1"
 alembic = "^1.10.3"
 pymysql = "^1.0.3"
